[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/shared/game/characters/Girlfriend.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shared/game/HUDPackage2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shared/game/characters/Boyfriend.tscn" type="PackedScene" id=3]
[ext_resource path="res://packages/fnf/scripts/game/levels/Level_Stage.gd" type="Script" id=4]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stageback.png" type="Texture" id=5]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagecurtains.png" type="Texture" id=6]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagefront.png" type="Texture" id=7]
[ext_resource path="res://assets/models/blackHole.tscn" type="PackedScene" id=8]
[ext_resource path="res://packages/fnf/resources/graphics/week1/back.png" type="Texture" id=9]
[ext_resource path="res://packages/fnf/characters/anita/Anita2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://packages/fnf/resources/graphics/week1/spaceEnvironment3.tres" type="Environment" id=11]
[ext_resource path="res://packages/fnf/resources/graphics/week1/sky1.png" type="Texture" id=12]
[ext_resource path="res://packages/spacedance/blackHoleCam.gd" type="Script" id=13]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Clouds.png" type="Texture" id=14]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship2D.tscn" type="PackedScene" id=15]
[ext_resource path="res://packages/fnf/resources/graphics/week1/shipinsideT.tscn" type="PackedScene" id=16]
[ext_resource path="res://packages/fnf/characters/anita/Anita.tscn" type="PackedScene" id=17]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship/ship.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/models/spaceCylinder.tscn" type="PackedScene" id=19]
[ext_resource path="res://packages/fnf/resources/videos/midSong3Event.webm" type="VideoStream" id=20]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Cutscenes/Song3/cutsceneFuckinEndMe.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/shared/game/characters/Boyfriend3D.tscn" type="PackedScene" id=22]
[ext_resource path="res://packages/fnf/characters/anita/AnitaIconExtended.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/shared/game/characters/Girlfriend3d.tscn" type="PackedScene" id=24]
[ext_resource path="res://tools/Song_Composers.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/models/shaders/crtShader.tres" type="Shader" id=26]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Cutscenes/Song3/maya_scared.png" type="Texture" id=27]
[ext_resource path="res://packages/fnf/scripts/game/characters/Maya.gd" type="Script" id=28]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 26 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.0
shader_param/scanlines_width = 0.0
shader_param/grille_opacity = 0.333
shader_param/resolution = Vector2( 640, 480 )
shader_param/pixelate = false
shader_param/roll = true
shader_param/roll_speed = 3.0
shader_param/roll_size = 16.099
shader_param/roll_variation = 2.393
shader_param/distort_intensity = 0.006
shader_param/noise_opacity = 0.257
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.06
shader_param/aberration = -0.014
shader_param/brightness = 1.4
shader_param/discolor = false
shader_param/warp_amount = 0.341
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.192

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 375, 487 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 27 )
region = Rect2( 375, 0, 375, 487 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 27 )
region = Rect2( 750, 0, 375, 487 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 27 )
region = Rect2( 1125, 0, 375, 487 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Level" type="WorldEnvironment"]
environment = ExtResource( 11 )
script = ExtResource( 4 )
performers = {
"metronome": "gf",
"opponent": "dad",
"player": "bf"
}
character_paths = {
"bf": NodePath("Boyfriend"),
"dad": NodePath("Anita"),
"gf": NodePath("ParallaxBackground/GF/Girlfriend")
}
step_zone_paths = {
"opponent": NodePath("HUDPackage2D/HUD/Visible_Elements/Opponent_Step_Zone"),
"player": NodePath("HUDPackage2D/HUD/Visible_Elements/Player_Step_Zone")
}
hud_path = NodePath("HUDPackage2D/HUD")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.96781, 0.251681, 0, -0.251681, 0.96781, -288.149, 128.544, 32.081 )
far = 828.7
script = ExtResource( 13 )

[node name="shipinside2" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.204, -7.82, 0.755 )
visible = false

[node name="Boyfriend" parent="." instance=ExtResource( 22 )]
transform = Transform( 0.0724176, 0, -0.0143588, 0, 0.0738274, 0, 0.0143588, 0, 0.0724176, -293.106, 116.829, 10.0311 )

[node name="Anita" parent="." instance=ExtResource( 17 )]
transform = Transform( 0.070268, 0, 0.0226472, 0, 0.0738274, 0, -0.0226472, 0, 0.070268, -293.912, 117.106, 10.0787 )
icon = ExtResource( 23 )

[node name="Girlfriend" parent="." instance=ExtResource( 24 )]
transform = Transform( 0.0510694, 0, -0.0533142, 0, 0.0738274, 0, 0.0533142, 0, 0.0510694, -292.591, 116.864, 9.34529 )
render_priority = -1
idle_frequency = 1

[node name="spaceCylinder" parent="." instance=ExtResource( 19 )]
transform = Transform( 7.64939, 0, 0, 0, 7.64939, 0, 0, 0, 7.64939, -293.43, 118.447, 9.2999 )
visible = false

[node name="ship" parent="." instance=ExtResource( 18 )]
transform = Transform( 0.560205, 0, 9.79494e-08, 0, 0.560205, 0, -9.79494e-08, 0, 0.560205, -293.351, 115.403, 9.07134 )
hyperspeed_mode = true

[node name="VideoLayer" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="VideoPlayer" type="VideoPlayer" parent="VideoLayer"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 20 )
buffering_msec = 10

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.9, 0.9 )

[node name="Stageback" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -600, -200 )
z_index = -3
texture = ExtResource( 5 )
centered = false

[node name="Stagefront" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -650, 600 )
scale = Vector2( 1.1, 1.1 )
z_index = -2
texture = ExtResource( 7 )
centered = false

[node name="Back" type="Sprite" parent="ParallaxBackground/BG"]
position = Vector2( 613.333, 492.813 )
scale = Vector2( 0.977431, 0.979282 )
texture = ExtResource( 9 )

[node name="GF" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.95, 0.95 )

[node name="Girlfriend" parent="ParallaxBackground/GF" instance=ExtResource( 1 )]

[node name="Battle" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Boyfriend" parent="ParallaxBackground/Battle" instance=ExtResource( 3 )]

[node name="Anita" parent="ParallaxBackground/Battle" instance=ExtResource( 10 )]
position = Vector2( -14, 162 )

[node name="FG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 0 )

[node name="Sky1" type="Sprite" parent="ParallaxBackground/FG"]
position = Vector2( 30.6662, 14.9999 )
scale = Vector2( 0.906944, 0.872222 )
texture = ExtResource( 12 )

[node name="Clouds" type="Sprite" parent="ParallaxBackground/FG"]
modulate = Color( 1, 1, 1, 0.356863 )
material = SubResource( 1 )
position = Vector2( 24.6664, 132 )
scale = Vector2( 0.899, 0.682 )
texture = ExtResource( 14 )

[node name="Stagecurtains" type="Sprite" parent="ParallaxBackground/FG"]
visible = false
position = Vector2( -350, -150 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )
centered = false

[node name="Ship2D" parent="ParallaxBackground/FG" instance=ExtResource( 15 )]
position = Vector2( 18.6662, 181 )
scale = Vector2( 0.761277, 0.746598 )
frame = 2

[node name="AuthorLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="BlackBars" type="Node2D" parent="AuthorLayer"]
visible = false

[node name="BlackBar" type="ColorRect" parent="AuthorLayer/BlackBars"]
margin_right = 1285.0
margin_bottom = 82.0
color = Color( 0, 0, 0, 1 )

[node name="BlackBar2" type="ColorRect" parent="AuthorLayer/BlackBars"]
margin_top = 638.0
margin_right = 1285.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="AuthorLayer"]
margin_right = 1288.0
margin_bottom = 728.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" parent="AuthorLayer" instance=ExtResource( 25 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 431.0
margin_bottom = 278.0
composers = "Stardust Tunes, SleP16, SAKK"
songName = "Escape Velocity"

[node name="CutsceneCanvas" parent="." instance=ExtResource( 21 )]
layer = 0
visible = false

[node name="HUDPackage2D" parent="." instance=ExtResource( 2 )]

[node name="Cam_HUD" parent="HUDPackage2D" index="2"]
zoom = Vector2( 1.111, 1.111 )

[node name="Ratings_List" parent="HUDPackage2D/HUD/Visible_Elements" index="0"]
position = Vector2( 350, 320 )

[node name="blackHole" parent="." instance=ExtResource( 8 )]
transform = Transform( 51.5875, 0, 0, 0, 51.5875, 0, 0, 0, 51.5875, -292.836, 128.274, -497.429 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 2 )
margin_right = 38.0
margin_bottom = 32.0
rect_scale = Vector2( 33.711, 22.56 )

[node name="Maya" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.069652, 0, 0, 0, 0.069652, 0, 0, 0, 0.167575, -293.371, 117.037, 9.86232 )
frames = SubResource( 11 )
script = ExtResource( 28 )
idle_frequency = 1

[editable path="HUDPackage2D"]
